--- a/skibidi-suite.vcxproj
+++ b/skibidi-suite.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="fileutil.c" />
+    <ClCompile Include="gc.c" />
     <ClCompile Include="Main.c" />
   </ItemGroup>
   <ItemGroup>
